--- a/src/app/animals/animals.component.html
+++ b/src/app/animals/animals.component.html
@@ -1,15 +1,17 @@
-<div *ngFor="let fact of animal">
-    <mat-card class="fact-card">
-        <mat-card-header>
-            <mat-card-title>Fact of the day</mat-card-title>
-            <mat-card-subtitle>{{fact.type}}</mat-card-subtitle>
-        </mat-card-header>
-        <mat-card-content>
-            <p>This card indeterminates progress bar.</p>
-        </mat-card-content>
-        <mat-card-footer>
-            <span>Created: {{fact.createdAt | date:'shortDate'}} | </span>
-            <span>Updated last: {{fact.updatedAt | date:'shortDate'}}</span>
-        </mat-card-footer>
-    </mat-card>
+<div class="card-container">
+    <div *ngFor="let fact of animal">
+        <mat-card class="fact-card">
+            <mat-card-header>
+                <mat-card-title class="fact-title">Fact of the day</mat-card-title>
+                <mat-card-subtitle class="fact-type">{{fact.type | uppercase}}</mat-card-subtitle>
+            </mat-card-header>
+            <mat-card-content>
+                <div><span class="fact-text">{{fact.text}}</span></div>
+                <div class="date-container">
+                    <span class="createdAt">Created: {{fact.createdAt | date:'shortDate'}} | </span>
+                    <span class="updatedAt">Updated last: {{fact.updatedAt | date:'shortDate'}}</span>
+                </div>
+            </mat-card-content>  
+        </mat-card>
+    </div>
 </div>
